update document